<resources>
    <string name="app_name">enigma</string>
    <string name="nama">DINUS\nAbsence</string>
    <string name="awal">Welcome to\nDINUS Absence</string>
    <string name="maha">Mahasiswa</string>
    <string name="dosen">Dosen</string>
    <string name="info">Info</string>
    <string name="tentang">Tentang</string>
    <string name="login">Log In</string>
    <string name="email">E-mail</string>
    <string name="pass">Password</string>
    <string name="masuk">Log In</string>
    <string name="Akun">Sign Up</string>
    <string name="Dicki">Prof Dicki Kurniawan</string>
    <string name="nip">123.4567.8910</string>
    <string name="list">List\nKehadiran</string>
    <string name="absen">Absen</string>
    <string name="dicki">Dicki Kurniawan</string>
    <string name="nim">A11.2017.10115</string>
    <string name="code">QR\nCode</string>
    <string name="kelas">Kriptografi\nA11.4606</string>
    <string name="kode">A11.4601</string>
    <string name="logout">Log Out</string>
    <string name="nipp">NIP</string>
    <string name="namaa">Nama</string>
    <string name="nimm">NIM</string>
    <string name="buatakun">Create Account</string>
    <string name="show">SHOW</string>
    <string name="team">Team</string>
    <string name="infodinus">Info\nDinus Absence</string>
    <string name="isiinfo">Dinus Abcence adalah sebuah aplikasi absensi berbasis mobile yang diciptakan guna mempermudah sistem pengabsenan pada saat perkuliahan.
    Tujuan awal pembuatan aplikasi ini adalah melihat pada saat ini sistem absen pada Udinus yang masih tradisional dengan menggunakan kertas.
    Untuk itu dibuatlah aplikasi ini  guna mempermudah masalah absen.
    \nSelain itu pembuatan aplikasi ini juga dalam rangka memenuhi tugas kuliah Proyek Perangkat Lunak yang dilalui pada semester 6 ini.</string>
    <string name="team1">Team\nDinus Abcence</string>
</resources>
