<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MasukDosen">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="250dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/dodge">
            <!--gambar user-->
            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                app:srcCompat="@drawable/dicki"
                android:layout_marginTop="32dp"/>
            <!--nama user-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Dicki"
                android:textSize="24sp"
                android:layout_marginTop="24dp"
                android:textColor="@color/putih"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal"/>
            <!--nip user-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nip"
                android:textColor="@color/putih"
                android:layout_gravity="center_horizontal"
                android:textSize="16sp"/>
        </LinearLayout>
    </RelativeLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <!--button list kehadiran-->
        <!--button absen-->

        <Button
            android:id="@+id/buttonlist"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_marginStart="60dp"
            android:layout_marginLeft="60dp"
            android:background="@color/put"
            android:text="@string/list"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.201" />

        <Button
            android:id="@+id/buttonabsen"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_alignStart="@id/buttonlist"
            android:layout_alignLeft="@id/buttonlist"
            android:background="@color/put"
            android:text="@string/absen"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.486"
            app:layout_constraintStart_toEndOf="@+id/buttonlist"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.201" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>